--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -24,6 +24,8 @@
             "styles": [
               "node_modules/primeng/resources/primeng.min.css",
               "node_modules/fullcalendar/dist/fullcalendar.min.css",
+              "node_modules/@fullcalendar/core/main.min.css",
+              "node_modules/@fullcalendar/daygrid/main.min.css",
               "node_modules/quill/dist/quill.snow.css",
               "node_modules/@nuvem/angular-base/src/lib/accessibility/accessibility.scss",
               "src/styles.scss"
