Adicionar microservico prescricao - BASIS-127296

--- a/chart/madre/templates/deployment.yaml
+++ b/chart/madre/templates/deployment.yaml
@@ -4,6 +4,8 @@
 ---
 {{- template "common.microservice" (dict "context" . "microservice" (merge .Values.pacientes .Values.comum)) -}}
 ---
+{{- template "common.microservice" (dict "context" . "microservice" (merge .Values.prescricao .Values.comum)) -}}
+---
 {{- template "common.microservice" (dict "context" . "microservice" (merge .Values.internacao .Values.comum)) -}}
 ---
 {{- template "common.client" (dict "context" . "client" (merge .Values.madrecliente .Values.comum) "gateway" .Values.gateway) -}}
