--- a/pacientes/package.json
+++ b/pacientes/package.json
@@ -8,9 +8,9 @@
     "node_modules"
   ],
   "devDependencies": {
-    "generator-jhipster-nuvem-java": "6.4.5",
+    "@openapitools/openapi-generator-cli": "0.0.14-4.0.2",
     "generator-jhipster": "6.4.1",
-    "@openapitools/openapi-generator-cli": "0.0.14-4.0.2"
+    "generator-jhipster-nuvem-java": "^6.5.0"
   },
   "engines": {
     "node": ">=8.9.0"
