--- a/pacientes/src/main/resources/config/application.yml
+++ b/pacientes/src/main/resources/config/application.yml
@@ -153,7 +153,7 @@ spring:
         pacienteSupplier-out-0:
           destination: madre-paciente
     function:
-      definition: triagemSupplier, pacienteSupplier
+      definition: triagemSupplier;pacienteSupplier
 server:
   servlet:
     session:
