--- a/internacao/src/main/resources/config/application-dev.yml
+++ b/internacao/src/main/resources/config/application-dev.yml
@@ -77,7 +77,7 @@ spring:
       password: changeme
   liquibase:
     # Remove 'faker' if you do not want the sample data to be loaded automatically
-    contexts: dev, faker
+    contexts: dev, faker, carga-exemplos
   mail:
     host: localhost
     port: 25
