Correção de erros de compilação

--- a/pacientes/src/main/resources/config/application-dev.yml
+++ b/pacientes/src/main/resources/config/application-dev.yml
@@ -77,7 +77,7 @@ spring:
       password: changeme
   liquibase:
     # Remove 'faker' if you do not want the sample data to be loaded automatically
-    contexts: dev, faker
+    contexts: faker
   mail:
     host: localhost
     port: 25
