Inserção de BreadCrumb em Pré-Cadastro de Pacientes

--- a/pacientes/src/main/resources/config/application-dev.yml
+++ b/pacientes/src/main/resources/config/application-dev.yml
@@ -78,7 +78,7 @@ spring:
   liquibase:
     # Remove 'faker' if you do not want the sample data to be loaded automatically
     contexts: dev, faker
-  mail:
+  mail:git
     host: localhost
     port: 25
     username:
