Alterarndo versão das dependêcnias do Spring e Kafka - BASIS-128436

--- a/prescricao/pom.xml
+++ b/prescricao/pom.xml
@@ -39,11 +39,11 @@
 		<profile.tls />
 
 		<!-- Dependency versions -->
-		<jhipster-dependencies.version>3.0.6</jhipster-dependencies.version>
+		<jhipster-dependencies.version>3.7.1</jhipster-dependencies.version>
 		<!-- The spring-boot version should match the one managed by https://mvnrepository.com/artifact/io.github.jhipster/jhipster-dependencies/${jhipster-dependencies.version} -->
-		<spring-boot.version>2.1.9.RELEASE</spring-boot.version>
+		<spring-boot.version>2.2.7.RELEASE</spring-boot.version>
 		<!-- The spring framework version should match the one managed by https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-dependencies/${spring-boot.version} -->
-		<spring.version>5.1.10.RELEASE</spring.version>
+		<spring.version>5.2.6.RELEASE</spring.version>
 		<!-- The hibernate version should match the one managed by https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-dependencies/${spring-boot.version} -->
 		<hibernate.version>5.3.12.Final</hibernate.version>
 		<!-- The javassist version should match the one managed by https://mvnrepository.com/artifact/org.hibernate/hibernate-core/${hibernate.version} -->
@@ -83,6 +83,7 @@
 		<junit.utReportFolder>${project.testresult.directory}/test</junit.utReportFolder>
 		<junit.itReportFolder>${project.testresult.directory}/integrationTest</junit.itReportFolder>
 		<lombok.version>1.18.10</lombok.version>
+		<kafka.version>2.4.1</kafka.version>
 		<!-- jhipster-needle-maven-property -->
 	</properties>
 
@@ -336,6 +337,25 @@
 			<scope>runtime</scope>
 		</dependency>
 		<!-- Spring Cloud -->
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-stream</artifactId>
+		</dependency>
+		<dependency>
+		<groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-stream-kafka</artifactId>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.apache.kafka</groupId>
+                    <artifactId>kafka-clients</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.kafka</groupId>
+            <artifactId>kafka-clients</artifactId>
+            <version>${kafka.version}</version>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter</artifactId>
