Configuração para criar o consumer - BASIS-128436

--- a/prescricao/src/main/resources/config/application.yml
+++ b/prescricao/src/main/resources/config/application.yml
@@ -145,6 +145,17 @@ spring:
   output:
     ansi:
       console-available: true
+      
+  cloud:
+    stream:
+      kafka:
+        consumer:
+          startOffset: earliest
+      bindings:
+        pacienteConsumer-in-0:
+          destination: madre-paciente
+    function:
+      definition: pacienteConsumer
 
 server:
   servlet:
