--- a/internacao/src/main/resources/config/application.yml
+++ b/internacao/src/main/resources/config/application.yml
@@ -152,6 +152,7 @@ spring:
           pacienteConsumer-in-0:
             consumer:
               startOffset: earliest
+              group: madre-internacao
       bindings:
         pacienteConsumer-in-0:
           destination: madre-paciente
