Criando um group para o consumer - BASIS-128436

--- a/prescricao/src/main/resources/config/application.yml
+++ b/prescricao/src/main/resources/config/application.yml
@@ -154,6 +154,7 @@ spring:
       bindings:
         pacienteConsumer-in-0:
           destination: madre-paciente
+          group: madre-prescricao
     function:
       definition: pacienteConsumer
 
