--- a/pacientes/pom.xml
+++ b/pacientes/pom.xml
@@ -2,7 +2,11 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
-
+    <parent>
+        <groupId>br.com.basis.madre</groupId>
+        <artifactId>madre-parent</artifactId>
+        <version>0.0.1-SNAPSHOT</version>
+    </parent>
     <groupId>br.com.basis.madre</groupId>
     <artifactId>pacientes</artifactId>
     <version>0.0.1-SNAPSHOT</version>
@@ -21,8 +25,6 @@
 
     <properties>
         <!-- Build properties -->
-        <maven.version>3.3.9</maven.version>
-        <java.version>1.8</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <project.testresult.directory>${project.build.directory}/test-results</project.testresult.directory>
