--- a/internacao/src/main/resources/config/application-dev.yml
+++ b/internacao/src/main/resources/config/application-dev.yml
@@ -75,6 +75,9 @@ spring:
       uri: http://localhost:9200
       username: elastic
       password: changeme
+      # Aumentar o timeout quando executar o sistema pela primeira vez para evitar problema
+      # na criação dos indexs no elasticsearch
+      read-timeout: 10000
   liquibase:
     # Remove 'faker' if you do not want the sample data to be loaded automatically
     contexts: dev, faker, carga-exemplos
