--- a/prescricao/src/main/resources/config/application.yml
+++ b/prescricao/src/main/resources/config/application.yml
@@ -156,7 +156,7 @@ spring:
           destination: madre-paciente
           group: madre-prescricao
         prescricaoMedicamentoSupplier-out-0:
-          destination: madre-prescricao-medica
+          destination: madre-prescricao-medicamento
     function:
       definition: pacienteConsumer;prescricaoMedicamentoSupplier
 
