Adiciona o módulo de suprimentos ao frontend

--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -15,6 +15,7 @@
         "paths": {
             "@shared/*": ["./src/app/shared/*"],
             "@internacao/*": ["./src/app/internacao/*"],
+            "@suprimentos/*": ["./src/app/suprimentos/*"],
             "@breadcrumb/*": ["./src/app/breadcrumb/*"]
         }
     }
