adicionando path para prescricao-medica - BASIS-131379

--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -16,6 +16,7 @@
             "@shared/*": ["./src/app/shared/*"],
             "@internacao/*": ["./src/app/internacao/*"],
             "@suprimentos/*": ["./src/app/suprimentos/*"],
+            "@prescricao-medica/*": ["./src/app/prescricao-medica/*"],
             "@breadcrumb/*": ["./src/app/breadcrumb/*"]
         }
     }
