--- a/prescricao/src/main/resources/config/application.yml
+++ b/prescricao/src/main/resources/config/application.yml
@@ -42,12 +42,12 @@ ribbon:
     enabled: true
 feign:
   hystrix:
-    enabled: true
-  # client:
-  #     config:
-  #         default:
-  #             connectTimeout: 5000
-  #             readTimeout: 5000
+    enabled: false
+    client:
+     config:
+       default:
+         connectTimeout: 5000
+         readTimeout: 5000
 
 # See https://github.com/Netflix/Hystrix/wiki/Configuration
 hystrix:
@@ -57,8 +57,8 @@ hystrix:
         isolation:
           strategy: SEMAPHORE
           # See https://github.com/spring-cloud/spring-cloud-netflix/issues/1330
-          # thread:
-          #     timeoutInMilliseconds: 10000
+          thread:
+            timeoutInMilliseconds: 10000
   shareSecurityContext: true
 
 management:
