Implementa detalhamento de consulta através do calendário

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,8 +25,10 @@
         "@angular/platform-browser": "9.1.0",
         "@angular/platform-browser-dynamic": "9.1.0",
         "@angular/router": "9.1.0",
-        "@fullcalendar/core": "^4.4.0",
-        "@fullcalendar/daygrid": "^4.4.0",
+        "@fullcalendar/core": "^4.4.2",
+        "@fullcalendar/daygrid": "4.4.2",
+        "@fullcalendar/interaction": "4.4.2",
+        "@fullcalendar/timegrid": "4.4.2",
         "@ngx-progressbar/core": "^5.2.1",
         "@ngx-progressbar/http": "^5.2.1",
         "@nuvem/angular-base": "^9.1.1",
