--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -1,154 +1,140 @@
 {
-  "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
-  "version": 1,
-  "newProjectRoot": "madre",
-  "projects": {
-    "ultima-cli": {
-      "root": "",
-      "sourceRoot": "src",
-      "projectType": "application",
-      "architect": {
-        "build": {
-          "builder": "@angular-devkit/build-angular:browser",
-          "options": {
-            "outputPath": "dist",
-            "index": "src/index.html",
-            "main": "src/main.ts",
-            "tsConfig": "src/tsconfig.app.json",
-            "polyfills": "src/polyfills.ts",
-            "preserveSymlinks": true,
-            "assets": [
-              "src/assets",
-              "src/upload.php"
-            ],
-            "styles": [
-              "node_modules/primeng/resources/primeng.min.css",
-              "node_modules/fullcalendar/dist/fullcalendar.min.css",
-              "node_modules/@fullcalendar/core/main.min.css",
-              "node_modules/@fullcalendar/daygrid/main.min.css",
-              "node_modules/quill/dist/quill.snow.css",
-              "node_modules/@nuvem/angular-base/src/lib/accessibility/accessibility.scss",
-              "src/styles.scss"
-            ],
-            "scripts": [
-              "node_modules/moment/moment.js",
-              "node_modules/chart.js/dist/Chart.js",
-              "node_modules/fullcalendar/dist/fullcalendar.js",
-              "node_modules/quill/dist/quill.js"
-            ]
-          },
-          "configurations": {
-            "production": {
-              "optimization": true,
-              "outputHashing": "all",
-              "sourceMap": false,
-              "extractCss": true,
-              "namedChunks": false,
-              "aot": true,
-              "extractLicenses": true,
-              "vendorChunk": false,
-              "buildOptimizer": true,
-              "fileReplacements": [
-                {
-                  "replace": "src/environments/environment.ts",
-                  "with": "src/environments/environment.prod.ts"
+    "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+    "version": 1,
+    "newProjectRoot": "madre",
+    "projects": {
+        "ultima-cli": {
+            "root": "",
+            "sourceRoot": "src",
+            "projectType": "application",
+            "architect": {
+                "build": {
+                    "builder": "@angular-devkit/build-angular:browser",
+                    "options": {
+                        "outputPath": "dist",
+                        "index": "src/index.html",
+                        "main": "src/main.ts",
+                        "tsConfig": "src/tsconfig.app.json",
+                        "polyfills": "src/polyfills.ts",
+                        "preserveSymlinks": true,
+                        "assets": ["src/assets", "src/upload.php"],
+                        "styles": [
+                            "node_modules/primeng/resources/primeng.min.css",
+                            "node_modules/fullcalendar/dist/fullcalendar.min.css",
+                            "node_modules/@fullcalendar/core/main.min.css",
+                            "node_modules/@fullcalendar/daygrid/main.min.css",
+                            "node_modules/@fullcalendar/timegrid/main.min.css",
+                            "node_modules/quill/dist/quill.snow.css",
+                            "node_modules/@nuvem/angular-base/src/lib/accessibility/accessibility.scss",
+                            "src/styles.scss"
+                        ],
+                        "scripts": [
+                            "node_modules/moment/moment.js",
+                            "node_modules/chart.js/dist/Chart.js",
+                            "node_modules/fullcalendar/dist/fullcalendar.js",
+                            "node_modules/quill/dist/quill.js"
+                        ]
+                    },
+                    "configurations": {
+                        "production": {
+                            "optimization": true,
+                            "outputHashing": "all",
+                            "sourceMap": false,
+                            "extractCss": true,
+                            "namedChunks": false,
+                            "aot": true,
+                            "extractLicenses": true,
+                            "vendorChunk": false,
+                            "buildOptimizer": true,
+                            "fileReplacements": [
+                                {
+                                    "replace": "src/environments/environment.ts",
+                                    "with": "src/environments/environment.prod.ts"
+                                }
+                            ]
+                        }
+                    }
+                },
+                "serve": {
+                    "builder": "@angular-devkit/build-angular:dev-server",
+                    "options": {
+                        "browserTarget": "ultima-cli:build"
+                    },
+                    "configurations": {
+                        "production": {
+                            "browserTarget": "ultima-cli:build:production"
+                        }
+                    }
+                },
+                "extract-i18n": {
+                    "builder": "@angular-devkit/build-angular:extract-i18n",
+                    "options": {
+                        "browserTarget": "ultima-cli:build"
+                    }
+                },
+                "test": {
+                    "builder": "@angular-devkit/build-angular:karma",
+                    "options": {
+                        "main": "src/test.ts",
+                        "polyfills": "src/polyfills.ts",
+                        "tsConfig": "src/tsconfig.spec.json",
+                        "karmaConfig": "src/karma.conf.js",
+                        "scripts": [
+                            "node_modules/moment/moment.js",
+                            "node_modules/chart.js/dist/Chart.js",
+                            "node_modules/fullcalendar/dist/fullcalendar.js",
+                            "node_modules/quill/dist/quill.js"
+                        ],
+                        "styles": [
+                            "node_modules/primeng/resources/primeng.min.css",
+                            "node_modules/fullcalendar/dist/fullcalendar.min.css",
+                            "node_modules/quill/dist/quill.snow.css",
+                            "styles.css"
+                        ],
+                        "assets": ["src/assets", "src/upload.php"]
+                    }
+                },
+                "lint": {
+                    "builder": "@angular-devkit/build-angular:tslint",
+                    "options": {
+                        "tsConfig": ["src/tsconfig.app.json", "src/tsconfig.spec.json"],
+                        "exclude": ["**/node_modules/**"]
+                    }
                 }
-              ]
             }
-          }
         },
-        "serve": {
-          "builder": "@angular-devkit/build-angular:dev-server",
-          "options": {
-            "browserTarget": "ultima-cli:build"
-          },
-          "configurations": {
-            "production": {
-              "browserTarget": "ultima-cli:build:production"
+        "ultima-cli-e2e": {
+            "root": "e2e/",
+            "projectType": "application",
+            "architect": {
+                "e2e": {
+                    "builder": "@angular-devkit/build-angular:protractor",
+                    "options": {
+                        "protractorConfig": "e2e/protractor.conf.js",
+                        "devServerTarget": "ultima-cli:serve"
+                    }
+                },
+                "lint": {
+                    "builder": "@angular-devkit/build-angular:tslint",
+                    "options": {
+                        "tsConfig": ["e2e/tsconfig.e2e.json"],
+                        "exclude": ["**/node_modules/**"]
+                    }
+                }
             }
-          }
-        },
-        "extract-i18n": {
-          "builder": "@angular-devkit/build-angular:extract-i18n",
-          "options": {
-            "browserTarget": "ultima-cli:build"
-          }
-        },
-        "test": {
-          "builder": "@angular-devkit/build-angular:karma",
-          "options": {
-            "main": "src/test.ts",
-            "polyfills": "src/polyfills.ts",
-            "tsConfig": "src/tsconfig.spec.json",
-            "karmaConfig": "src/karma.conf.js",
-            "scripts": [
-              "node_modules/moment/moment.js",
-              "node_modules/chart.js/dist/Chart.js",
-              "node_modules/fullcalendar/dist/fullcalendar.js",
-              "node_modules/quill/dist/quill.js"
-            ],
-            "styles": [
-              "node_modules/primeng/resources/primeng.min.css",
-              "node_modules/fullcalendar/dist/fullcalendar.min.css",
-              "node_modules/quill/dist/quill.snow.css",
-              "styles.css"
-            ],
-            "assets": [
-              "src/assets",
-              "src/upload.php"
-            ]
-          }
-        },
-        "lint": {
-          "builder": "@angular-devkit/build-angular:tslint",
-          "options": {
-            "tsConfig": [
-              "src/tsconfig.app.json",
-              "src/tsconfig.spec.json"
-            ],
-            "exclude": [
-              "**/node_modules/**"
-            ]
-          }
         }
-      }
     },
-    "ultima-cli-e2e": {
-      "root": "e2e/",
-      "projectType": "application",
-      "architect": {
-        "e2e": {
-          "builder": "@angular-devkit/build-angular:protractor",
-          "options": {
-            "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "ultima-cli:serve"
-          }
+    "defaultProject": "ultima-cli",
+    "schematics": {
+        "@schematics/angular:component": {
+            "prefix": "app",
+            "styleext": "css"
         },
-        "lint": {
-          "builder": "@angular-devkit/build-angular:tslint",
-          "options": {
-            "tsConfig": [
-              "e2e/tsconfig.e2e.json"
-            ],
-            "exclude": [
-              "**/node_modules/**"
-            ]
-          }
+        "@schematics/angular:directive": {
+            "prefix": "app"
         }
-      }
-    }
-  },
-  "defaultProject": "ultima-cli",
-  "schematics": {
-    "@schematics/angular:component": {
-      "prefix": "app",
-      "styleext": "css"
     },
-    "@schematics/angular:directive": {
-      "prefix": "app"
+    "cli": {
+        "analytics": false
     }
-  },
-  "cli": {
-    "analytics": false
-  }
 }
