--- a/chart/madre/Chart.yaml
+++ b/chart/madre/Chart.yaml
@@ -1,12 +1,17 @@
+apiVersion: v2
 name: madre
+description: madre
+type: application
 version: 1.0.2
 appVersion: 1.0.0
-description: madre
 keywords:
-- Madre
-home: 
+  - Madre
 sources:
-- https://github.com/BasisTI/madre/
+  - https://github.com/BasisTI/madre/
 maintainers:
-- name: Basis
-  email: basis@basis.com.br
+  - name: Basis
+    email: basis@basis.com.br
+dependencies:
+  - name: common
+    version: 2.0.2
+    repository: 'http://element.basis.com.br/repository/commons-helm/'
