--- a/chart/madre/templates/deployment.yaml
+++ b/chart/madre/templates/deployment.yaml
@@ -8,4 +8,6 @@
 ---
 {{- template "common.microservice" (dict "context" . "microservice" (merge .Values.internacao .Values.comum)) -}}
 ---
+{{- template "common.microservice" (dict "context" . "microservice" (merge .Values.farmacia .Values.comum)) -}}
+---
 {{- template "common.client" (dict "context" . "client" (merge .Values.madrecliente .Values.comum) "gateway" .Values.gateway) -}}
