Alterando Dockerfile para multi-stage - BASIS-135533

--- a/docker/nginx/Dockerfile
+++ b/docker/nginx/Dockerfile
@@ -1,3 +1,14 @@
+FROM basisti/build-frontend-npm:node-10.16.0 AS builder
+
+WORKDIR /usr/src/app
+
+COPY . .
+
+ENV NG_CLI_ANALYTICS=ci
+
+RUN set -eux ; \
+      npm install && npm run build --prod
+
 FROM nginx
 
-ADD  dist.tar.gz /usr/share/nginx/html/
+COPY --from=builder /usr/src/app/dist/ /usr/share/nginx/html/
