--- a/docker/nginx/Dockerfile
+++ b/docker/nginx/Dockerfile
@@ -2,7 +2,7 @@ FROM basisti/build-frontend-npm:node-10.16.0 AS builder
 
 WORKDIR /usr/src/app
 
-COPY . .
+ADD code.tar.gz .
 
 ENV NG_CLI_ANALYTICS=ci
 
