--- a/docker/nginx/Dockerfile
+++ b/docker/nginx/Dockerfile
@@ -1,5 +1,9 @@
 FROM basisti/build-frontend-npm:node-10.16.0 AS builder
 
+USER jenkins
+
+WORKDIR /var/lib/jenkins/code
+
 ADD code.tar.gz .
 
 ENV NG_CLI_ANALYTICS=ci
@@ -9,4 +13,4 @@ RUN set -eux ; \
 
 FROM nginx
 
-COPY --from=builder /var/lib/jenkins/dist/ /usr/share/nginx/html/
+COPY --from=builder /var/lib/jenkins/code/dist/ /usr/share/nginx/html/
