Atualização do chart para adição do módulo Consulta, e README. BASIS-161934

--- a/chart/madre/templates/deployment.yaml
+++ b/chart/madre/templates/deployment.yaml
@@ -12,4 +12,6 @@
 ---
 {{- template "common.microservice" (dict "context" . "microservice" (merge .Values.madresuprimentos .Values.comum)) -}}
 ---
+{{- template "common.microservice" (dict "context" . "microservice" (merge .Values.madreconsulta .Values.comum)) -}}
+---
 {{- template "common.client" (dict "context" . "client" (merge .Values.madrecliente .Values.comum) "gateway" .Values.gateway) -}}
